-Add Login Action -Add Login view

--- a/ProductCatalog/Views/Shared/_Header.cshtml
+++ b/ProductCatalog/Views/Shared/_Header.cshtml
@@ -178,7 +178,16 @@
 					<!--end::Menu item-->
 					<!--begin::Menu item-->
 					<div class="menu-item px-5">
-						<a href="../../demo14/dist/authentication/layouts/corporate/sign-in.html" class="menu-link px-5">Sign Out</a>
+						<a asp-controller="Account" asp-action="Registeration" class="menu-link px-5">Register</a>
+					</div>
+					<!--end::Menu item-->
+					<div class="menu-item px-5">
+						<a asp-controller="Account" asp-action="Login" class="menu-link px-5">Login</a>
+					</div>
+					<!--end::Menu item-->
+					<!--begin::Menu item-->
+					<div class="menu-item px-5">
+						<a href="../../demo14/dist/authentication/layouts/corporate/sign-in.html" class="menu-link px-5">Logout</a>
 					</div>
 					<!--end::Menu item-->
 				</div>
