--- a/ProductCatalog/Views/Account/Registeration.cshtml
+++ b/ProductCatalog/Views/Account/Registeration.cshtml
@@ -43,7 +43,7 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group pt-3 m-3">
-                <a asp-controller="Home" asp-action="Index" class="btn btn-icon btn-dark w-100"><i class="fa-solid fa-arrow-right-to-bracket fs-4 me-2"></i>Register</a>
+                <input value="Register" type="submit" class="btn btn-dark w-100" />
             </div>
             <div class="m-3 text-center">
                 <a asp-controller="Account" asp-action="Login" class="text-dark">Already have an account?</a>
