--- a/ProductCatalog/Views/Account/Registeration.cshtml
+++ b/ProductCatalog/Views/Account/Registeration.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="Registeration">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group m-3">
+                <label asp-for="FullName" class="control-label pb-3"></label>
+                <input asp-for="FullName" class="form-control" />
+                <span asp-validation-for="FullName" class="text-danger"></span>
+            </div>
+            <div class="form-group m-3">
                 <label asp-for="UserName" class="control-label pb-3"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
