--- a/ProductCatalog/wwwroot/css/site.css
+++ b/ProductCatalog/wwwroot/css/site.css
@@ -41,4 +41,20 @@ tr td #ProductImg{
     width:250px;
 }
 
+.profile-Img {
+    width:300px;
+    height:300px;
+   margin:auto;
+}
+.profile-Img img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit:cover;
+}
 
+tr td #ProfileImg {
+    width: 50px !important;
+    height: 50px !important;
+    border-radius:50% !important;
+}
