--- a/ProductCatalog/Views/Shared/_Aside.cshtml
+++ b/ProductCatalog/Views/Shared/_Aside.cshtml
@@ -54,6 +54,12 @@
                             </span>
                             <span class="menu-title">Users</span>
                         </a>
+                        <a class="menu-link" asp-controller="ErrorLog" asp-action="Index" active-when="ErrorLog">
+                            <span class="menu-icon">
+                                <i class="fa-solid fa-triangle-exclamation"></i>
+                            </span>
+                            <span class="menu-title">Errors</span>
+                        </a>
                     }
 
                     <!--end:Menu link-->
