--- a/ProductCatalog/Views/Dashboard/Index.cshtml
+++ b/ProductCatalog/Views/Dashboard/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ProductCatalog.Models.Product>
+﻿@model PaginationViewModel
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery antiforgery
 
 @{
@@ -38,13 +38,13 @@
                         Status
                     </th>
                     <th>
-                        UserId
+                        UserName
                     </th>
                     <th></th>
 				</tr>
 			</thead>
 			<tbody>
-                @foreach (var item in Model)
+                @foreach (var item in Model.Products)
                 {
                     <tr>
                         <td >
@@ -52,7 +52,7 @@
 
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Name)
+                            @(item.Name.Length > 15 ? item.Name.Substring(0, 15) : item.Name)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CreationDate)
@@ -77,7 +77,7 @@
                            
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.UserId)
+                            @Html.DisplayFor(modelItem => item.UserName)
                         </td>
                         <td>
                             <button type="button" class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
@@ -127,7 +127,18 @@
 
 <input type="hidden" name="__RequestVerificationToken" value="@antiforgery.GetAndStoreTokens(Context).RequestToken" />
 
-
+<div class="row">
+    <div class="col-md-12">
+        <ul class="pagination mt-5 mb-5">
+            @for (int i = 1; i <= Model.PageCount; i++)
+            {
+                <li class="page-item" Active-when="@i">
+                    <a asp-action="Index" asp-route-PageIndex="@i"  class="page-link">@i</a>
+                </li>
+            }
+        </ul>
+    </div>
+</div>
 
 
  
